@@ -53,3 +53,9 @@ JavaFX 8 or above (personally used JavaFX 11) and any IDE with JavaFX libraries.
 I found a different solution to this, just run the jar file in the command line using the required modules. I have created 
 a .sh file to run the application which will work on mac and linux. (Batch file could be used with the same command in windows)
 Replace the path to lib folder of javafx and the path to the jar file with the path in your pc.
+To run the application, use the command below in the terminal, or create a .sh or batch file for the same.
+
+```
+$ java --module-path /<path to javafx>/javafx-sdk-11.0.2/lib --add-modules=javafx.controls,javafx.fxml -jar /<path to project>/QuizApp/out/artifacts/QuizApp_jar/QuizApp.jar
+```
+
